fix chart button text overflow in english version

--- a/src/app/portal/components/results/results.component.scss
+++ b/src/app/portal/components/results/results.component.scss
@@ -122,7 +122,7 @@ span.total {
   }
   .vis-style-toggle {
     border-radius: 0;
-    height: 55px;
+    min-height: 55px;
   }
   #download-image {
     margin-bottom: 10px;
